ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-07-04 Marc Pujol
	- GUI:
		* Fixed #1383: DatabaseResult->EOF returns false on select queries which return 0 rows.

2008-07-02 Benedikt Heintel
	- CONFIG:
		* Dropped PHP4 Support
	- DOCS:
		* Fixed #1374: apache2-suexec new in Lenny
	- ENGINE:
		* Fixed #1363: Domain Aliase at Root - Wrong in apache2 - ispcp.conf
	- GUI:
		* Fixed #1179: Changing domain_default_page and errordocs templates
		* Fixed #1368: SQL syntax in reseller_user_statistics.php
	- TOOLS:
		* Updated HTMLpurifier to version 3.1.1

2008-07-01 Marc Pujol
	- GUI:
		* Fixed #1372: Proftpd accept autentificate with password made by first 8 chars of the original password (Thanks sci2tech)

2008-07-01 Marc Pujol
	- GUI:
		* Fixed #1352 PHPmyadmin login from control panel not working (thanks Machaven)

2008-06-30 Benedikt Heintel
	- GUI:
		* Fixed #1367: Fatal Error after Login

2008-06-29 Benedikt Heintel
	- TOOLS:
		* Updated phpMyAdmin to 2.11.7
		* Fixed #1365: session files for master domain are not removed

2008-06-28 Benedikt Heintel
	- GUI:
		* Changed: Base PHP Code

2008-06-23 Benedikt Heintel
	- RELEASE ispCP ω Omega 1.0.0 RC5a (GUI Update)
	- GUI:
		* Fixed: Missing icons
		* Fixed: Message shown on same page on "forward error"
	- DISTS:
		* Fixed #1362: (Ubuntu) User creation fails

2008-06-21 Marc Pujol
	- GUI:
		* Fixed #1360: Editing mail forwarded accounts (no mailbox) fails
		* Fixed #1361: Password for forwarded+mailbox mail accounts can't be changed

2008-06-21 Benedikt Heintel
	- DOCS:
		* Fixed #1359: two errors prevent installation on Ubuntu Hardy Heron and solution to both
	- GUI:
		* Fixed #1247: png icon is ugly scaled
	- TOOLS:
		* Updated phpMyAdmin to 2.11.7 RC2

2008-06-17 Benedikt Heintel
	- GUI:
		* Fixed #1231: Session conflict / redirection problem
		* Fixed #1277: Adding CHECK_FOR_UPDATES in ispcp.conf
		* Fixed #1351: Filemanager not work update RC4 -> RC5