@@ -1572,8 +1572,16 @@ sub dmn_add_httpd_file_data {
 		$rs = sys_command("$main::cfg{'CMD_CP'} -Rp $root_dir/gui/domain_default_page/images $www_dir/$dmn_name/htdocs/");
 		return $rs if ($rs != 0);
 
-		$rs = setfmode("$www_dir/$dmn_name/htdocs/images/*", $sys_user, $sys_group, 0755);
-		return $rs if ($rs != 0);
+		opendir(DIR, "$www_dir/$dmn_name/htdocs/images/");
+		my @files = readdir(DIR);
+		closedir(DIR);
+
+		foreach (@files) {
+			# ignore . and .. :
+            next if ($_ eq "." || $_ eq "..");
+			$rs = setfmode("$www_dir/$dmn_name/htdocs/images/$_", $sys_user, $sys_group, 0755);
+			return $rs if ($rs != 0);
+		}
 	}
 
 	#
