@@ -1,6 +1,13 @@
 ispCP ω 1.0.0 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2008-07-04 Benedikt Heintel
+	- GUI:
+		* Fixed #1381: Admin/reseller can not delete user that does not have a database
+		* Fixed #1382: PASSWD_STRONG enabled or disabled is not corect generated for the template
+	- ENGINE:
+		* Fixed #1380: setup is broken
+
 2008-07-04 Marc Pujol
 	- GUI:
 		* Fixed #1383: DatabaseResult->EOF returns false on select queries which return 0 rows.
